--- a/config.yaml
+++ b/config.yaml
@@ -12,5 +12,5 @@ out_tracking_results: output/Tracking/results.png
 input_video: output/Video/clip3.mp4
 input_image_homography: sources/Map/basket_field.jpg
 
-masker: Sparse
+masker: BgSub
 update_mask: False
