--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,8 @@ out_players_data: output/Tracking/data_players.txt
 out_tracking_results: output/Tracking/results.png
 
 input_video: output/Video/SegTrack2/Video/soldier.mp4
-input_truth: output/Video/SegTrack2/Truth/soldier.mp4 # Can be null
+input_truth: output/Video/SegTrack2/Truth/parachute.mp4 # Can be null
 input_image_homography: sources/Map/basket_field.jpg
 
-masker: LinPau
+masker: SemiSupervised
 update_mask: False
