--- a/config.yaml
+++ b/config.yaml
@@ -13,5 +13,6 @@ input_video: output/Video/SegTrack2/Video/worm.mp4
 input_truth: output/Video/SegTrack2/Truth/worm.mp4 # Can be null
 input_image_homography: sources/Map/basket_field.jpg
 
-masker: SemiSupervisedTracker
+masker: SemiSupervised
+custom_trackers: [SemiSupervisedTracker, LinPuntracker] #trackers for which we haven't implemented a full compatible structure with OpenCV's trackers
 update_mask: False
