- Fix multiple selection - Added config field for multi-selection

--- a/config.yaml
+++ b/config.yaml
@@ -15,14 +15,15 @@ out_bboxes: output/Tracking/bounding_box.png
 out_players_data: output/Tracking/data_players.txt
 out_tracking_results: output/Tracking/results.png
 
-input_video: output/Video/SegTrack2/Video/bird_of_paradise.mp4
-input_truth: output/Video/SegTrack2/Truth/parachute.mp4 # Can be null
+input_video: output/Video/SegTrack2/Video/soldier.mp4
+input_truth: output/Video/SegTrack2/Truth/soldier.mp4 # Can be null
 input_image_homography: sources/Map/basket_field.jpg
 
 masker: SemiSupervised
 custom_trackers: [SemiSupervisedTracker, LinPuntracker] #trackers for which we haven't implemented a full compatible structure with OpenCV's trackers
 update_mask: False
 
+multi_selection: True
 re_init_span: 3 #define new ROI/RONI every tot_duration_clip/re_init_span, first selection excluded
 
 
