Removed useless things

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ tau: 0.3
 resize_factor: 1
 
 show_novelty_detection: True
-show_masks: True
+show_masks: False
 show_homography: False
 debug: True
 
@@ -18,7 +18,7 @@ input_video: output/Video/SegTrack2/Video/soldier.mp4
 input_truth: output/Video/SegTrack2/Truth/soldier.mp4 # Can be null
 input_image_homography: sources/Map/basket_field.jpg
 
-masker: GrabCut
+masker: SemiSupervised
 custom_trackers: [SemiSupervisedTracker, LinPuntracker] #trackers for which we haven't implemented a full compatible structure with OpenCV's trackers
 update_mask: False
 
@@ -32,9 +32,9 @@ params:
   n_components: 1
   novelty_detection: True
   over_segmentation: quickshift
-  features: "8 hsv"
+  features: "8 hsv_lab"
   dilation_kernel: 7
-  prior_weight: 0.1
+  prior_weight: 0.0
 
 #
 # Examples of configuration for benchmark videos
@@ -47,7 +47,7 @@ params:
 #Worm
 #pts: [[[[71, 132], [98, 132], [118, 142], [130, 154], [149, 164], [174, 178], [194, 189], [220, 199], [207, 207], [181, 206], [157, 196], [124, 178], [97, 169], [72, 157], [59, 143], [61, 137]], [[138, 124], [150, 131], [163, 138], [182, 149], [204, 159], [227, 164], [244, 180], [252, 195], [227, 194], [190, 182], [153, 166], [122, 153], [119, 135], [123, 125]], [[134, 115], [157, 119], [178, 121], [189, 130], [183, 166], [159, 163], [156, 148], [143, 147], [124, 137], [122, 122], [127, 117]]]]
 #pts_frame_numbers: [0, 81, 162]
-#bboxes_roni: [[(264, 158, 60, 90), (305, 135, 44, 95), (249, 127, 49, 86)]]
+#bboxes_roni: [[[264, 158, 60, 90], [305, 135, 44, 95], [249, 127, 49, 86]]]
 
 #Configuration for soldier
 pts: [[[[419, 16], [427, 22], [430, 33], [423, 46], [425, 66], [432, 81], [444, 120], [435, 112], [414, 114], [417, 143], [419, 157], [410, 180], [420, 205], [411, 212], [397, 206], [403, 158], [390, 152], [387, 169], [374, 178], [360, 191], [354, 213], [346, 202], [348, 178], [375, 160], [367, 136], [365, 104], [346, 101], [367, 79], [390, 50], [404, 33], [408, 22]], [[409, 33], [420, 42], [417, 54], [440, 112], [425, 104], [409, 109], [410, 119], [424, 138], [416, 174], [415, 196], [398, 194], [411, 148], [388, 140], [383, 211], [370, 206], [378, 160], [362, 122], [363, 91], [378, 79], [393, 55], [399, 38]], [[400, 56], [411, 60], [407, 69], [409, 86], [412, 100], [411, 113], [399, 112], [397, 132], [408, 155], [404, 173], [396, 194], [380, 193], [376, 178], [385, 174], [385, 155], [376, 142], [366, 123], [365, 105], [381, 83], [393, 66]], [[395, 73], [402, 81], [404, 100], [408, 119], [394, 123], [404, 152], [403, 167], [393, 204], [389, 197], [393, 174], [383, 157], [369, 142], [368, 119], [373, 104], [385, 84]]]]
