Removed useless params

--- a/config_benchmark.yaml
+++ b/config_benchmark.yaml
@@ -2,21 +2,15 @@
 # See 'config.yaml' for more details on the meaning of each param
 
 tracker: CSRT
-tau: 0.3
 resize_factor: 1
 
 show_novelty_detection: False
 show_masks: False
-show_homography: False
 debug: False
 
-out_players: output/Tracking/tracked_players.avi
-out_players_mask: output/Tracking/tracked_players_mask.avi
-out_homography: output/Tracking/tracked_homography.avi
-out_bboxes: output/Tracking/bounding_box.png
-out_players_data: output/Tracking/data_players.txt
-out_tracking_results: output/Tracking/results.png
-input_image_homography: sources/Map/basket_field.jpg
+out_tracked: output/tracked.avi 
+out_binary_mask: output/binary_mask.avi 
+out_mask: output/mask.avi
 
 masker: SemiSupervised
 custom_trackers: [SemiSupervisedTracker, LinPuntracker] 
